almost done HW3

--- a/templates/incl/single_answer.html
+++ b/templates/incl/single_answer.html
@@ -13,7 +13,7 @@
                         </div>
                         <div class="row">
                                 <div class="col">
-                                        <b class="likes_counter">5</b>
+                                        <b class="likes_counter">{{ answer.rating }}</b>
                                         <img class ="estimate" src="{% static "img/like button (off).png" %}" alt="">
                                         <img class ="estimate" src="{% static "img/dislike button (off).png" %}" alt="">
                                 </div>
