--- a/templates/question.html
+++ b/templates/question.html
@@ -11,8 +11,7 @@
           {% for answer in answers %}
             {% include "incl/single_answer.html" %}
           {% endfor %}
-          {% include "incl/pagination_answers.html" %}
-
+          {% include "incl/pagination.html" %}
 
         <div class="row">
                 <hr class="horizontal_line_my_answer" size="8">
