--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,10 @@
 
 
         <div class="row">
-                <div class="col-4"><h2><a href ="{% url "index" %}">New questions</a></h2></div>
-                <div class="col"><a href ="{% url "hot" %}">Hot questions</a></div>
+<!--                    <a href="{% url 'index' %}">New Question</a>-->
+    <!--                <a href="{% url 'hot' %}">Hot Question</a>-->
+                    <div class="col-4"><h2><a href ="{% url 'index' %}">New questions</a></h2></div>
+                    <div class="col"><h2><a href ="{% url 'hot' %}">Hot questions</a></h2></div>
         </div>
           {% for question in questions %}
             {% include "incl/single_question.html" %}
