--- a/templates/incl/single_question.html
+++ b/templates/incl/single_question.html
@@ -3,7 +3,7 @@
 <div class="row container-fluid question">
           <div class="row">
                 <div class="col-3">
-                        <img class = "avatar" src="{% static "img/Avatar №1.jpg" %}" alt="">
+                        <img class = "avatar" src="{{ question.author.avatar.url }}" alt="">
                 </div>
                 <div class="col-9">
 
