--- a/templates/tag.html
+++ b/templates/tag.html
@@ -1,6 +1,10 @@
 {% extends "incl/base.html" %}
 {% load static %}
 
+{% block header %}
+{% include "incl/navbar.html" %}
+{% endblock header %}
+
 {% block content %}
       <div class="col-9 container-fluid">
                   <div class="row">
