--- a/templates/incl/base.html
+++ b/templates/incl/base.html
@@ -57,15 +57,39 @@
 
         </form>
         <div class="col-4"></div>
-        <img src = "{% static "img/main avatar.jpeg" %}" class = "avatar col-1" alt="error with avatar">
-        <span class="container-fluid">
-                <span class="row">
-                        <div class="col username"> Tony Stark </div>
-                </span>
-                <span class="row">
-                         <div class="col settings_log_out"> <a href="{% url "user_settings" %}"> Settings </a></div>
-                         <div class="col settings_log_out"> <a href="{% url "login" %}">Log out</a></div>
-                </span>
+{% if request.user.is_authenticated %}
+                        <img src="{{ user.avatar.url }}" class="avatar col-1">
+
+                    </li>
+                        <ul>
+                            <li class="row username">
+                                {{ request.user.username }}
+                            </li>
+                            <li>
+                                <div class="row ">
+                                    <a href="{% url 'user_settings' %}" class="col settings_log_out container-fluid"> Settings </a>
+                                    <a href="{% url 'logout' %}?next={{ request.path }}" class="col settings_log_out container-fluid"> log out </a>
+                                </div>
+                            </li>
+                            </li>
+                            {% else %}
+                            <li class="nav-item user">
+                                <div>
+                                    <a href="{% url 'login' %}?next={{ request.path }}" class="col settings_log_out container-fluid"> Log in </a>
+                                    <a href="{% url 'signup' %}" class="col settings_log_out container-fluid"> sign up </a>
+                                </div>
+                            </li>
+                            {% endif %}
+                        </ul>
+{#        <img src = "{% static "img/main avatar.jpeg" %}" class = "avatar col-1" alt="error with avatar">#}
+{#        <span class="container-fluid">#}
+{#                <span class="row">#}
+{#                        <div class="col username"> Tony Stark </div>#}
+{#                </span>#}
+{#                <span class="row">#}
+{#                         <div class="col settings_log_out"> <a href="{% url "user_settings" %}"> Settings </a></div>#}
+{#                         <div class="col settings_log_out"> <a href="{% url "login" %}">Log out</a></div>#}
+{#                </span>#}
         </span>
       </div>
     </div>
