--- a/templates/incl/single_answer.html
+++ b/templates/incl/single_answer.html
@@ -1,26 +1,22 @@
 {% load static %}
-
-
-                <div class="row container-fluid question">
-                        <div class="row">
-                              <div class="col-3">
-{#                                      <img class = "avatar" src="{% static "img/Avatar №1.jpg" %}" alt="">#}
-                                  <img src="{{ answer.author.avatar.url }}" class="avatar">
-                              </div>
-                              <div class="col-9">
-                                <h3>{{ answer.title }}</h3> <!-- How to destroy Thanos? -->
-                                  {{ answer.text }}
-                              </div>
-                        </div>
-                        <div class="row">
-                                <div class="col">
-                                        <b class="likes_counter">{{ answer.rating }}</b>
-                                        <img class ="estimate" src="{% static "img/like button (off).png" %}" alt="">
-                                        <img class ="estimate" src="{% static "img/dislike button (off).png" %}" alt="">
-                                </div>
-                                <div class="col">
-                                        <input type="checkbox">
-                                        Correct!
-                                </div>
-                        </div>
-                </div>
+    <div class="row container-fluid question">
+            <div class="row">
+                  <div class="col-3">
+                      <img src="{{ answer.author.avatar.url }}" class="avatar">
+                  </div>
+                  <div class="col-9">
+                    <h3>{{ answer.title }}</h3>
+                      {{ answer.text }}
+                  </div>
+            </div>
+            <div class="row">
+                    <div class="col">
+                            <b class="likes_counter">{{ answer.rating }}</b>
+                            <img class ="estimate" src="{% static "img/like button (off).png" %}" alt="">
+                    </div>
+                    <div class="col">
+                            <input type="checkbox">
+                            Correct!
+                    </div>
+            </div>
+    </div>
